# nf-claw

./: .gitignore  .gitmodules  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  catalog.json  catalog.md  conftest.py  pyproject.toml  sources.tsv
.github/workflows/: auto-update.yml  deploy-pages.yml  discover-pipelines.yml  drift-check.yml  nextflow-validate.yml  (+2 more)
docs/: adding-a-pipeline.md  architecture.md  compatibility.md  known-issues.md  updating.md
librarian/: __init__.py  add_pipeline.py  check_drift.py  discover_pipelines.py  update_pipelines.py  write_catalog.py  write_skill.py
runner/: __init__.py  __main__.py  cli.py  diagnostics.py  discovery.py  engine_version.py  errors.py  execution.py  nextflow_command.py  orchestration.py  outputs.py  parameters.py  preflight.py  provenance.py  samplesheet.py  schema.py  submodule.py  versions.py
scripts/: nextflow_accept.sh
tests/: test_add_pipeline.py  test_audit_fixes.py  test_check_drift.py  test_cli.py  test_diagnostics.py  test_discover.py  test_discover_add_one.py  test_discovery.py  test_engine_version.py  test_errors.py  test_execution.py  test_nextflow_command.py  test_orchestration.py  test_outputs.py  test_parameters.py  test_preflight.py  test_provenance.py  test_samplesheet.py  test_schema.py  test_schema_parity.py  test_submodule.py  test_update_pipelines.py  test_versions.py  test_write_catalog.py  test_write_skill.py  test_write_skill_cells.py
website/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+106 files in other folders)
